<resources>
    <string name="app_name">Emerald</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="welcome_to_emerald">Welcome to Emerald</string>
    <string name="your_email">Your Email</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_emerald_chat_app">Hi there, I\'m using Emerald Chat App</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="settings_display_name">Display Name</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="user_status">User status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="enter_message">Enter message...</string>
    <string name="message_text">Message Text</string>
    <string name="_00_00">00:00</string>
</resources>
